# PREDICTIVE_MAINTENANCE_TINYML

./: .gitignore  CMakeLists.txt  README.md
docs/: HARDWARE_WIRING_SCHEMATIC.md
main/: CMakeLists.txt  anomaly_detector.cpp  app_main.cpp  deep_sleep_manager.cpp  deep_sleep_manager.hpp  idf_component.yml  mpu6050_watchdog.cpp  mpu6050_watchdog.hpp  sd_card_logger.cpp  sd_card_logger.hpp  stft_processor.hpp  tflite_inference.hpp
main/drivers/: i2s_microphone.hpp  sd_card_logger.cpp
main/dsp/: stft_processor.hpp
main/model/: model_data.h  tflite_inference.hpp
pipeline/: requirements.txt
pipeline/gui/: ground_control_station.py
pipeline/model/: autoencoder_esp32_matched.keras  autoencoder_model.keras  autoencoder_model.py  model_data.h  model_float32.tflite  train_esp32_matched.py  train_mimii.py
pipeline/utils/: dsp_pipeline.py
python/: model_data.h  model_int8.tflite  requirements.txt
